--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "creative-portfolio",
+  "name": "creative-3d-portfolio",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,17 +11,27 @@
   "dependencies": {
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.4"
+    "next": "14.1.4",
+    "@react-three/drei": "^9.103.0",
+    "@react-three/fiber": "^8.16.1",
+    "clsx": "^2.1.0",
+    "three": "^0.163.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/three": "^0.163.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@typescript-eslint/eslint-plugin": "^7.5.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.4"
+    "eslint-config-next": "14.1.4",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "postcss": "^8",
+    "prettier": "^3.2.5",
+    "prettier-plugin-tailwindcss": "^0.5.13",
+    "tailwindcss": "^3.3.0",
+    "typescript": "^5"
   }
 }
