--- a/package.json
+++ b/package.json
@@ -9,19 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^18",
-    "react-dom": "^18",
-    "next": "14.1.4",
     "@react-three/drei": "^9.103.0",
     "@react-three/fiber": "^8.16.1",
     "clsx": "^2.1.0",
+    "gsap": "^3.12.5",
+    "next": "14.1.4",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "three": "^0.163.0"
   },
   "devDependencies": {
-    "@types/three": "^0.163.0",
+    "@tailwindcss/typography": "^0.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/three": "^0.163.0",
     "@typescript-eslint/eslint-plugin": "^7.5.0",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
