--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,10 +7,11 @@
     "quotes": "warn",
     "spaced-comment": "warn",
     "prefer-const": "warn",
-    "max-len": ["warn", { "code": 120, "tabWidth": 2, "ignoreUrls": true }],
+    "max-len": ["warn", { "code": 160, "tabWidth": 2, "ignoreUrls": true }],
     "max-lines": ["warn", { "max": 200, "skipComments": true }],
     "prettier/prettier": ["warn", { "endOfLine": "auto", "singleQuote": false }],
-    "@typescript-eslint/no-unused-vars": "off"
+    "@typescript-eslint/no-unused-vars": "off",
+    "@typescript-eslint/consistent-type-imports": ["warn", { "fixStyle": "inline-type-imports" }]
   },
   "plugins": ["prettier"]
 }
